--- a/index.html
+++ b/index.html
@@ -12,6 +12,29 @@
 
 </head>
 <body>
+    <header>
+        <div class="row">
+            <div class="col-md-12">
+                <h1>Train Tracker</h1>
+            </div>
+        </div>
+    </header>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="card">
+                    <h5 class="card-header">Current Train Schedule</h5>
+                    <div class="card-body">
+                        <table>
+                            <tr>
+                                
+                            </tr>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
