basic wireframe complete.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <div class="row">
             <div class="col-md-12">
-                <h1>Train Tracker</h1>
+                <h1 class="text-center">Train Tracker</h1>
             </div>
         </div>
     </header>
@@ -25,11 +25,47 @@
                 <div class="card">
                     <h5 class="card-header">Current Train Schedule</h5>
                     <div class="card-body">
-                        <table>
-                            <tr>
-                                
-                            </tr>
+                        <table class="table">
+                            <thead>
+                                <tr>
+                                    <th scope="col">Train Name</th>
+                                    <th scope="col">Destination</th>
+                                    <th scope="col">Frequency (min)</th>
+                                    <th scope="col">Next Arrival</th>
+                                    <th scope="col">Minutes Away</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                            </tbody>
                         </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <div class="card">
+                    <h5 class="card-header">Add Train</h5>
+                    <div class="card-body">
+                        <form>
+                            <div class="form-group">
+                                <label for="trainNameInput">Train Name</label>
+                                <input type="text" class="form-control" id="trainNameInput">
+                            </div>
+                            <div class="form-group">
+                                <label for="destinationInput">Destination</label>
+                                <input type="text" class="form-control" id="destinationInput">
+                            </div>
+                            <div class="form-group">
+                                <label for="firstTrainTimeInput">First Train Time (HH:mm - military time)</label>
+                                <input type="text" class="form-control" id="firstTrainTimeInput">
+                            </div>
+                            <div class="form-group">
+                                <label for="frequencyInput">Frequency (min)</label>
+                                <input type="text" class="form-control" id="frequencyInput">
+                            </div>
+                            <button type="submit" class="btn btn-primary">Submit</button>
+                        </form>
                     </div>
                 </div>
             </div>
