Got the submit button listener working and values can be console logged.

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                                 <label for="frequencyInput">Frequency (min)</label>
                                 <input type="text" class="form-control" id="frequencyInput">
                             </div>
-                            <button type="submit" class="btn btn-primary">Submit</button>
+                            <button type="submit" class="btn btn-primary" id="submitBtn">Submit</button>
                         </form>
                     </div>
                 </div>
