Did some styling to make it look old timey.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Special+Elite&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
 
 </head>
@@ -15,7 +16,7 @@
     <header>
         <div class="row">
             <div class="col-md-12">
-                <h1 class="text-center">Train Tracker</h1>
+                <h1 class="text-center mt-2">Train Tracker</h1>
             </div>
         </div>
     </header>
@@ -64,7 +65,7 @@
                                 <label for="frequencyInput">Frequency (min)</label>
                                 <input type="text" class="form-control" id="frequencyInput">
                             </div>
-                            <button type="submit" class="btn btn-primary" id="submitBtn">Submit</button>
+                            <button type="submit" class="btn btn-warning" id="submitBtn">Submit</button>
                         </form>
                     </div>
                 </div>
