Did a bunch of documentation.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Train Tracker</title>
-
+    <!-- Here we link to our various stylesheets, starting with a reset.css, then bootstrap, google fonts for our old-timey font, and then our custom css. -->
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Special+Elite&display=swap" rel="stylesheet">
@@ -16,6 +16,7 @@
     <header>
         <div class="row">
             <div class="col-md-12">
+                <!-- This is the main headline for the page. -->
                 <h1 class="text-center mt-2">Train Tracker</h1>
             </div>
         </div>
@@ -23,11 +24,13 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
+                <!-- This div displays all the data that's been inputted so far. -->
                 <div class="card">
                     <h5 class="card-header">Current Train Schedule</h5>
                     <div class="card-body">
                         <table class="table">
                             <thead>
+                                <!-- These are the headings to the table we'll be populating with our train data. -->
                                 <tr>
                                     <th scope="col">Train Name</th>
                                     <th scope="col">Destination</th>
@@ -36,6 +39,7 @@
                                     <th scope="col">Minutes Away</th>
                                 </tr>
                             </thead>
+                            <!-- This table body is where we'll display the data being generated in our javascript. -->
                             <tbody id="trainData">
                             </tbody>
                         </table>
@@ -45,6 +49,7 @@
         </div>
         <div class="row">
             <div class="col-md-12">
+                <!-- This div contains the form we use to enter more trains into the table. -->
                 <div class="card">
                     <h5 class="card-header">Add Train</h5>
                     <div class="card-body">
@@ -73,7 +78,7 @@
         </div>
     </div>
     
-
+<!-- These are the links to the various javascript files we're using for the page, starting with jQuery, then two used by Bootstrap, followed by moment.js, two used by firebase, then the actual javascript we use to run this page. -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
