Noticed my table looked bad on phones, with the table spilling out of the div on small screens.  Did a bit of bootstrap magic and now it has a horizontal scroll on the table if the display is small.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <!-- This div displays all the data that's been inputted so far. -->
                 <div class="card">
                     <h5 class="card-header">Current Train Schedule</h5>
-                    <div class="card-body">
+                    <div class="card-body table-responsive-md">
                         <table class="table">
                             <thead>
                                 <!-- These are the headings to the table we'll be populating with our train data. -->
