Added some stripes to the table to make it easier to read.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div class="card">
                     <h5 class="card-header">Current Train Schedule</h5>
                     <div class="card-body table-responsive-md">
-                        <table class="table">
+                        <table class="table table-striped">
                             <thead>
                                 <!-- These are the headings to the table we'll be populating with our train data. -->
                                 <tr>
